# zuchsya

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
beatmaps/: sample.zuchsya
crates/zuchsya/: Cargo.toml
crates/zuchsya-core/: Cargo.toml
crates/zuchsya-core/src/: beatmap.rs  hit_object.rs  lib.rs  scoring.rs  scroll_velocity.rs  state.rs  timing.rs
crates/zuchsya-editor/: Cargo.toml
crates/zuchsya-editor/src/: lib.rs
crates/zuchsya-play/: Cargo.toml
crates/zuchsya-play/src/: hud.rs  input.rs  lib.rs  playfield.rs  scroll.rs
crates/zuchsya-play/src/judgement/: hold.rs  mod.rs  note.rs  score.rs
crates/zuchsya-play/src/note/: mod.rs  spawn.rs  systems.rs  types.rs
crates/zuchsya/src/: main.rs
crates/zuchsya/src/app/: mod.rs
crates/zuchsya/src/ui/: mod.rs
crates/zuchsya/src/ui/screens/: loading.rs  main_menu.rs  mod.rs  song_select.rs
