[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Levi Lim <shiueo.csh@gmail.com>"]

[workspace.dependencies]
# Internal crates
zuchsya-core = { path = "crates/zuchsya-core" }
zuchsya-play = { path = "crates/zuchsya-play" }
zuchsya-editor = { path = "crates/zuchsya-editor" }

bevy = "0.17"
bevy_kira_audio = "0.25.0-rc.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
thiserror = "2.0.17"
anyhow = "1.0.100"